<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_shape"/>

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlists"
        style="@style/ActivityViewHeader" />

    <ListView
        android:id="@+id/list_playlists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHeader"
        android:layout_above="@+id/layout_buttons"
        style="@style/ActivityListView"
        tools:listitem="@layout/playlist_list_item">
    </ListView>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NavButtonsLayout">

        <Button
            android:id="@+id/btnNowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"/>

        <Button
            android:id="@+id/btnActiveQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_queue"/>
    </LinearLayout>

</RelativeLayout>